struct User {

    User() {
        
        int id { };

    }

};